# libtorrent-stubs

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/libtorrent-stubs/: __init__.pyi
