[project]
name = "libtorrent-stubs"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
